WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313510
Fix imported/w3c/web-platform-tests/css/css-tables/absolute-tables-007.html
https://bugs.webkit.org/show_bug.cgi?id=313510
Summary
Fix imported/w3c/web-platform-tests/css/css-tables/absolute-tables-007.html
alan
Reported
2026-04-27 19:20:44 PDT
ssia
Attachments
Patch
(11.76 KB, patch)
2026-04-27 19:21 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(13.37 KB, patch)
2026-04-28 17:26 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(15.29 KB, patch)
2026-04-29 05:20 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-04-27 19:21:28 PDT
Created
attachment 479347
[details]
Patch
alan
Comment 2
2026-04-28 17:26:08 PDT
Created
attachment 479359
[details]
Patch
alan
Comment 3
2026-04-29 05:20:14 PDT
Created
attachment 479367
[details]
[fast-cq]Patch
EWS
Comment 4
2026-04-29 07:29:17 PDT
Committed
312280@main
(148139518f1a): <
https://commits.webkit.org/312280@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479367
[details]
.
Radar WebKit Bug Importer
Comment 5
2026-04-29 07:30:14 PDT
<
rdar://problem/175852400
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug